--- a/helm-deploy/templates/hpa.yaml
+++ b/helm-deploy/templates/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.hpa.name }}
   namespace: {{ .Values.namespace }}
 spec:
   maxReplicas:  {{ .Values.autoscaling.maxReplicas }}
@@ -9,5 +9,5 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ .Values.name }}
+    name: {{ .Values.deployment.name }}
   targetCPUUtilizationPercentage: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
