--- a/helm-deploy/templates/service.yaml
+++ b/helm-deploy/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+  name: {{ .Values.service.name }}
   namespace: {{ .Values.namespace }}
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-internal: "{{ .Values.service.loadBalancerInternal }}"
 spec:
   ports:
   - port: {{ .Values.service.port }}
