--- a/helm-deploy/values.yaml
+++ b/helm-deploy/values.yaml
@@ -1,5 +1,12 @@
-name: airport
+deployment:
+  name: airport-deployment
 replicaCount: 1
+
+networkPolicy:
+  name: airport-networkpolicy
+
+service:
+  name: airport-service
 
 image:
   repository: 454717754853.dkr.ecr.us-east-1.amazonaws.com/airport-repo-dev
@@ -15,8 +22,7 @@ service:
   type: LoadBalancer
   port: 8000
   targetport: 8080
-  annotations: 
-    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+  loadBalancerInternal: "true"
 
 resources:
   requests:
@@ -29,6 +35,7 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 1
   targetCPUUtilizationPercentage: 80
+
 namespace: "helm"
 
 ##for liveness and readiness
