--- a/helm-deploy/templates/deployment.yaml
+++ b/helm-deploy/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
       containers: 
       - image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        name: {{ .Values..deployment.name }}
+        name: {{ .Values.deployment.name }}
         ports:
         - containerPort: {{ .Values.container.port }}
           protocol: TCP
