--- a/helm-deploy/values.yaml
+++ b/helm-deploy/values.yaml
@@ -8,6 +8,9 @@ networkPolicy:
 service:
   name: airport-service
 
+hpa:
+  name: airport-hpa
+  
 image:
   repository: 454717754853.dkr.ecr.us-east-1.amazonaws.com/airport-repo-dev
   pullPolicy: Always
